foundations/aws/us-east-2/sandbox/aegershman-example-0/deployments/prometheus-operator/config/opsfiles/prometheus-operator-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus-operator

#@ load("@ytt:overlay", "overlay")
#@overlay/match by=overlay.and_op(overlay.subset({"metadata":{"name":"prometheus-operator"}}), overlay.subset({"kind": "Namespace"}))
---
metadata:
  labels:
    #@overlay/replace
    istio-injection: enabled
