foundations/aws/us-east-2/sandbox/aegershman-example-0/deployments/prometheus-operator/config/opsfiles/grafana-virtual-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
  namespace: prometheus-operator
spec:
  hosts:
    - grafana.cf.gershman.io
  gateways:
    - cf-system/istio-ingressgateway
  http:
    - route:
        - destination:
            host: prometheus-operator-grafana.prometheus-operator.svc.cluster.local
            port:
              number: 80
