foundations/aws/us-east-2/sandbox/aegershman-example-0/deployments/prometheus-operator/config/opsfiles/prometheus-virtual-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtual-service
  namespace: prometheus-operator
spec:
  hosts:
    - prometheus.cf.gershman.io
  gateways:
    - cf-system/istio-ingressgateway
  http:
    - route:
        - destination:
            host: prometheus-operator-prometheus.prometheus-operator.svc.cluster.local
            port:
              number: 9090
